populate pokemons in SearchViewController

--- a/Pokedex/ViewControllers/SearchViewController.xib
+++ b/Pokedex/ViewControllers/SearchViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchViewController" customModule="Pokedex" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="TLd-Da-NhE" id="QpH-SH-KjD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
